Builded a Subscription Page

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
 }
 
 .contentSelection {
-    background-color: aqua;
+    background-color:#778ca3;
 }
 
 .contentView {
-    background-color: aquamarine;
+    background-color: #26de81;
 }
