--- a/src/components/contentSelection/ContentSelection.css
+++ b/src/components/contentSelection/ContentSelection.css
@@ -6,10 +6,14 @@
     list-style-type: none;
 }
 
-h3 {
-    font-weight: 200 !important;
+.ContentSelection h4 {
+    font-weight: 400;
 }
 
 li {
     padding-bottom: 0.75rem;
+}
+
+.ContentSelection h3 {
+    margin-bottom: 0;
 }
